# proteus

./: Cargo.toml  README.md
src/: config.rs  error.rs  lib.rs  main.rs
src/accel/: gpu.rs  mod.rs  shaders.rs
src/fingerprint/: hdc.rs  mod.rs  sdr.rs  text.rs  word.rs
src/index/: hnsw.rs  inverted.rs  lsh.rs  mmap.rs  mod.rs  pq.rs  semantic_lookup.rs  topology.rs
src/roaring/: Cargo.toml  mod.rs
src/roaring/bitmap/: cmp.rs  container.rs  fmt.rs  inherent.rs  iter.rs  mod.rs  multiops.rs  ops.rs  ops_with_serialized.rs  serde.rs  serialization.rs  statistics.rs  util.rs
src/roaring/bitmap/store/: bitmap_store.rs  interval_store.rs  mod.rs  simd.rs
src/roaring/bitmap/store/array_store/: mod.rs  scalar.rs  vector.rs  visitor.rs
src/roaring/treemap/: cmp.rs  fmt.rs  inherent.rs  iter.rs  mod.rs  multiops.rs  ops.rs  serde.rs  serialization.rs  util.rs
src/segmentation/: mod.rs  semantic.rs  sentence.rs
src/similarity/: cosine.rs  jaccard.rs  mod.rs  overlap.rs
src/som/: batch.rs  map.rs  mod.rs  neuron.rs  simd.rs  training.rs
src/storage/: format.rs  mod.rs  retina.rs
src/text/: mod.rs  normalizer.rs  segmenter.rs  tokenizer.rs
src/wtpsplit/: config.rs  constants.rs  error.rs  extract.rs  hub.rs  mod.rs  model.rs  sat.rs  utils.rs  wtp.rs
tests/: integration_tests.rs
