[package]
name = "roaring"
version = "0.11.2"
# When changing this value don't forget to change the MSRV test in `.github/workflows/test.yml`!!
rust-version = "1.80.1"
authors = ["Wim Looman <wim@nemo157.com>", "Kerollmops <kero@meilisearch.com>"]
description = "A better compressed bitset - pure Rust implementation"

documentation = "https://docs.rs/roaring"
repository = "https://github.com/RoaringBitmap/roaring-rs"

readme = "../README.md"
keywords = ["roaring", "data-structure", "bitmap"]
categories = ["data-structures"]
edition = "2021"

license = "MIT OR Apache-2.0"

[dependencies]
bytemuck = "1.21.0"
byteorder = "1.5.0"
serde = "1.0.217"

[features]
default = ["std"]
serde = ["dep:serde", "std"]
simd = []
std = ["dep:bytemuck", "dep:byteorder"]

[dev-dependencies]
serde_json = "1.0.138"
postcard = { version = "1.1", features = [ "alloc" ] }
proptest = "1.6.0"
